--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: rust
 
+services:
+  - docker
+
 rust:
   - stable
   - beta
@@ -12,6 +15,7 @@ os:
 script:
   - cargo build --verbose --all --all-features
   - cargo test --verbose --all --all-features
+  - make docker-alpine
 
 cache: cargo
 
