--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ os:
 
 before_install:
   - if (test -n "$TRAVIS_TAG" && test "$TRAVIS_RUST_VERSION" = "stable" && test "$TRAVIS_OS_NAME" = "linux"); then export DEPLOY=true; else export DEPLOY=false; fi
+  - if $DEPLOY; then (sudo apt-get update && sudo apt-get install -y musl-dev musl-tools); fi
 
 before_script:
   - if $DEPLOY; then rustup target add x86_64-unknown-linux-musl; fi
@@ -21,8 +22,8 @@ before_script:
 script:
   - cargo build --verbose --all --all-features
   - cargo test --verbose --all --all-features
-  - if $DEPLOY; then make docker-image; else true; fi
   - if $DEPLOY; then cargo test --verbose --all --all-features --target=x86_64-unknown-linux-musl; else true; fi
+  - if $DEPLOY; then make docker-image; else true; fi
 
 deploy:
   provider: script
