Implemented log shipping to a Redis host.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,8 @@ edition = "2018"
 firetrap = "0.1"
 log = "0.4"
 env_logger = "0.6"
+redis = "0.9.0"
+serde_json = "1.0.39"
+chrono = "0.4.6"
+r2d2 = "0.8.3"
+r2d2_redis = "0.8.0"
