--- a/full.Dockerfile.template
+++ b/full.Dockerfile.template
@@ -3,7 +3,7 @@ FROM rust:%%RUST_VERSION%%-slim
 WORKDIR /usr/src/unftp
 COPY . .
 
-RUN cargo install --path .
+RUN BUILD_VERSION="%%BUILD_VERSION%%" cargo install --path .
 RUN cargo clean
 
 CMD ["unftp"]
