--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "unftp"
-version = "0.0.3"
-authors = ["Koen Wilde <koen@chillheid.nl>"]
+version = "0.0.4"
+authors = ["Koen Wilde <koen@chillheid.nl>", "Hannes de Jager <hdejager@bol.com>"]
 edition = "2018"
 
 [dependencies]
