--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,6 @@ serde_json = "1.0.39"
 chrono = "0.4.6"
 r2d2 = "0.8.3"
 r2d2_redis = "0.8.0"
+slog = "2.4.1"
+slog-term = "2.4.0"
+slog-async = "2.3.0"
