--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,6 @@ r2d2_redis = "0.8.0"
 slog = "2.4.1"
 slog-term = "2.4.0"
 slog-async = "2.3.0"
+hyper = "0.12.25"
+prometheus = "0.4"
+futures = "0.1"
