--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,11 +5,11 @@ authors = ["Koen Wilde <koen@chillheid.nl>", "Hannes de Jager <hdejager@bol.com>
 edition = "2018"
 
 [dependencies]
-libunftp = {git = "https://github.com/bolcom/libunftp.git", branch = "master"}
+libunftp = {git = "https://github.com/bolcom/libunftp.git", branch = "master", features=["rest", "pam"]}
 log = "0.4"
 env_logger = "0.6"
 redis = "0.9.0"
-serde_json = "1.0.39"
+serde_json = "1.0"
 chrono = "0.4.6"
 r2d2 = "0.8.3"
 r2d2_redis = "0.8.0"
@@ -17,5 +17,8 @@ slog = "2.4.1"
 slog-term = "2.4.0"
 slog-async = "2.3.0"
 hyper = "0.12.25"
+http = "0.1"
 prometheus = "0.4"
 futures = "0.1"
+tokio = "0.1"
+
