add log -> slog bridge

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ r2d2_redis = "0.8.0"
 slog = "2.4.1"
 slog-term = "2.4.0"
 slog-async = "2.3.0"
+slog-stdlog = "4.0.0"
+slog-scope = "4.0.0"
 hyper = "0.12.25"
 http = "0.1"
 prometheus = "0.4"
