--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ license = "Apache-2.0"
 readme = "README.md"
 
 [dependencies]
-libunftp = {git = "https://github.com/bolcom/libunftp.git", branch = "master", features=["rest", "pam"]}
+libunftp = {git = "https://github.com/bolcom/libunftp.git", branch = "master"}
 log = "0.4"
 env_logger = "0.6"
 redis = "0.9.0"
@@ -37,3 +37,9 @@ futures = "0.1"
 tokio = "0.1"
 tokio-io = "0.1"
 clap = "2.33.0"
+
+[features]
+default = ["rest", "cloud_storage", "pam"]
+pam = ["libunftp/pam"]
+cloud_storage = ["libunftp/cloud_storage"]
+rest = ["libunftp/rest"]
