--- a/alpine.Dockerfile.template
+++ b/alpine.Dockerfile.template
@@ -3,10 +3,18 @@ WORKDIR /usr/src/unftp
 COPY . .
 RUN apt-get update && apt-get install -y \
   musl-dev \
-  musl-tools
+  musl-tools \
+  libpam0g-dev
 RUN rustup target add x86_64-unknown-linux-musl
 RUN BUILD_VERSION="%%BUILD_VERSION%%" cargo build --release --target=x86_64-unknown-linux-musl
 
+# run as user for security
 FROM alpine:latest
-COPY --from=builder /usr/src/unftp/target/x86_64-unknown-linux-musl/release/unftp /
-CMD ["/unftp"]
+run mkdir /unftp
+RUN addgroup -S unftp && adduser -S unftp -G unftp
+COPY --from=builder /usr/src/unftp/target/x86_64-unknown-linux-musl/release/unftp /unftp
+RUN chown -R unftp:unftp /unftp
+
+WORKDIR /unftp
+USER unftp
+CMD unftp
