--- a/minimal.Dockerfile.template
+++ b/minimal.Dockerfile.template
@@ -1,16 +1,16 @@
-### FIXME: In order for rustc to compile static, it needs all the Cargo libraries to be compiled static. But Cargo has no standard way to do that.
-### consequently, you can't compile static binary in rust right now. this image is broken until rustc/cargo is fixed.
-
 FROM rust:%%RUST_VERSION%%-slim AS builder
 WORKDIR /usr/src/unftp
 COPY . .
 RUN apt-get update && apt-get install -y \
   musl-dev \
-  musl-tools \
-  libpam0g-dev
+  musl-tools
 RUN rustup target add x86_64-unknown-linux-musl
-RUN BUILD_VERSION="%%BUILD_VERSION%%" cargo build --release --target=x86_64-unknown-linux-musl
+ENV RUSTFLAGS="-C target-feature=+crt-static"
+RUN BUILD_VERSION="%%BUILD_VERSION%%" cargo build --no-default-features --features docker --release --target=x86_64-unknown-linux-musl
 
 FROM scratch
-COPY --from=builder /usr/src/unftp/target/x86_64-unknown-linux-musl/release/unftp /
+
+# run as user for security
+COPY --chown=1010:1010 --from=builder /usr/src/unftp/target/x86_64-unknown-linux-musl/release/unftp /unftp
+USER 1010
 CMD ["/unftp"]
