--- a/alpine.Dockerfile.template
+++ b/alpine.Dockerfile.template
@@ -10,6 +10,7 @@ RUN BUILD_VERSION="%%BUILD_VERSION%%" cargo build --no-default-features --featur
 
 FROM alpine:latest
 
+# we could also RUN 'apk add ca-certificates', but we prefer to be consistent with the -minimal image
 COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
 
 # run as user for security
