--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ tokio = "0.1"
 tokio-io = "0.1"
 clap = "2.33.0"
 yup-oauth2 = {version = "3.1.0"}
+lazy_static = "1.3.0"
 
 [features]
 pam = ["libunftp/pam"]
@@ -53,3 +54,6 @@ docker = ["rest", "cloud_storage"]
 
 # only used in build.rs
 static = []
+
+[build-dependencies]
+built = "0.3"
