--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,12 +30,14 @@ slog-term = "2.4.0"
 slog-async = "2.3.0"
 slog-stdlog = "4.0.0"
 slog-scope = "4.0.0"
-hyper = "0.12.25"
+# Hyper 12 is only needed because the auth plugin needs a type from it
+hyper12 = { package="hyper", version = "0.12.25"}
+hyper = "0.13"
 http = "0.1"
 prometheus = "0.7"
-futures = "0.1"
-tokio = "0.1"
-tokio-io = "0.1"
+futures01 = { package = "futures", version = "0.1"}
+tokio01 = { package="tokio", version = "0.1"}
+tokio-compat = { version = "0.1", features = ["rt-full"] }
 clap = "2.33.0"
 yup-oauth2 = {version = "3.1.0"}
 lazy_static = "1.3.0"
