--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,8 @@ license = "Apache-2.0"
 readme = "README.md"
 
 [dependencies]
-libunftp = "0.5.1"
+#libunftp = "0.5.1"
+libunftp = { git="https://github.com/bolcom/libunftp", branch="hannes/tokio-compat"}
 log = "0.4"
 env_logger = "0.6"
 redis = "0.9.0"
