Use latest libunftp on master

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ readme = "README.md"
 [dependencies]
 #libunftp = "0.5.1"
 libunftp = { git="https://github.com/bolcom/libunftp" }
+#libunftp = { path = "../libunftp" }
 log = "0.4"
 env_logger = "0.6"
 redis = "0.9.0"
@@ -50,11 +51,11 @@ rest = ["libunftp/rest"]
 jsonfile_auth = ["libunftp/jsonfile_auth"]
 
 # build everything by default to make sure build works
-default = ["rest", "cloud_storage", "pam", "jsonfile_auth"]
+default = ["rest", "cloud_storage", "jsonfile_auth"]
 
 # features that are compatible with docker builds
 # pam is disabled in most docker images as it requires libc (consequently, cannot compile static either)
-docker = ["rest", "cloud_storage"]
+docker = ["rest", "cloud_storage", "jsonfile_auth"]
 
 # only used in build.rs
 static = []
