--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ license = "Apache-2.0"
 readme = "README.md"
 
 [dependencies]
-libunftp = "0.6.1"
+libunftp = { git="https://github.com/bolcom/libunftp" }
 log = "0.4"
 env_logger = "0.6"
 redis = "0.9.0"
@@ -37,12 +37,12 @@ futures01 = { package = "futures", version = "0.1"}
 tokio01 = { package="tokio", version = "0.1"}
 tokio-compat = { version = "0.1", features = ["rt-full"] }
 clap = "2.33.0"
-yup-oauth2 = {version = "3.1.0"}
+yup-oauth2 = {version = "4.1.0", optional = true}
 lazy_static = "1.3.0"
 
 [features]
 pam = ["libunftp/pam"]
-cloud_storage = ["libunftp/cloud_storage"]
+cloud_storage = ["libunftp/cloud_storage", "yup-oauth2"]
 rest = ["libunftp/rest"]
 jsonfile_auth = ["libunftp/jsonfile_auth"]
 
