--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,7 @@ license = "Apache-2.0"
 readme = "README.md"
 
 [dependencies]
-libunftp = {git = "https://github.com/bolcom/libunftp.git", branch = "master"}
-#libunftp = "0.6.1"
+libunftp = "0.7.0"
 log = "0.4"
 env_logger = "0.6"
 redis = "0.9.0"
@@ -34,9 +33,8 @@ slog-scope = "4.0.0"
 hyper = "0.13"
 http = "0.1"
 prometheus = "0.7"
-futures01 = { package = "futures", version = "0.1"}
-tokio01 = { package="tokio", version = "0.1"}
-tokio-compat = { version = "0.1", features = ["rt-full"] }
+futures = "0.3"
+tokio = { version = "0.2", features = ["full"]}
 clap = "2.33.0"
 yup-oauth2 = {version = "4.1.0", optional = true}
 lazy_static = "1.3.0"
