--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "unftp"
-version = "0.8.2"
+version = "0.8.3"
 authors = [
     "Agoston Horvath <ahorvath@bol.com>",
     "Dávid Kosztka <dkosztka@bol.com>",
@@ -17,7 +17,8 @@ license = "Apache-2.0"
 readme = "README.md"
 
 [dependencies]
-libunftp = "0.7.0"
+libunftp = {git = "https://github.com/bolcom/libunftp.git", branch = "master"}
+#libunftp = "0.6.1"
 log = "0.4"
 env_logger = "0.6"
 redis = "0.9.0"
