--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ license = "Apache-2.0"
 readme = "README.md"
 
 [dependencies]
-libunftp = "0.7.0"
+libunftp = {git = "https://github.com/bolcom/libunftp.git", branch = "master"}
 log = "0.4"
 env_logger = "0.6"
 redis = "0.9.0"
@@ -31,26 +31,26 @@ slog-async = "2.3.0"
 slog-stdlog = "4.0.0"
 slog-scope = "4.0.0"
 hyper = "0.13"
-http = "0.1"
-prometheus = "0.7"
+http = "0.2.1"
+prometheus = "0.8"
 futures = "0.3"
 tokio = { version = "0.2", features = ["full"]}
 clap = "2.33.0"
 yup-oauth2 = {version = "4.1.0", optional = true}
-lazy_static = "1.3.0"
+lazy_static = "1.4.0"
 
 [features]
-pam = ["libunftp/pam"]
+pam_auth = ["libunftp/pam_auth"]
 cloud_storage = ["libunftp/cloud_storage", "yup-oauth2"]
-rest = ["libunftp/rest"]
+rest_auth = ["libunftp/rest_auth"]
 jsonfile_auth = ["libunftp/jsonfile_auth"]
 
 # build everything by default to make sure build works
-default = ["rest", "cloud_storage", "jsonfile_auth"]
+default = ["rest_auth", "cloud_storage", "jsonfile_auth"]
 
 # features that are compatible with docker builds
 # pam is disabled in most docker images as it requires libc (consequently, cannot compile static either)
-docker = ["rest", "cloud_storage", "jsonfile_auth"]
+docker = ["rest_auth", "cloud_storage", "jsonfile_auth"]
 
 # only used in build.rs
 static = []
