--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,8 @@ license = "Apache-2.0"
 readme = "README.md"
 
 [dependencies]
-libunftp = "0.8.0"
+async-trait = "0.1.30"
+libunftp = "0.9.0"
 log = "0.4"
 env_logger = "0.6"
 redis = "0.9.0"
