--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ readme = "README.md"
 
 [dependencies]
 async-trait = "0.1.30"
-libunftp = "0.9.0"
+libunftp = { git="https://github.com/bolcom/libunftp", branch="master" }
 log = "0.4"
 env_logger = "0.6"
 redis = "0.9.0"
@@ -31,7 +31,7 @@ slog-term = "2.4.0"
 slog-async = "2.3.0"
 slog-stdlog = "4.0.0"
 slog-scope = "4.0.0"
-hyper = "0.13"
+hyper = "0.13.5"
 http = "0.2.1"
 prometheus = "0.8"
 futures = "0.3"
