--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "unftp"
-version = "0.8.4"
+version = "0.9.0"
 authors = [
     "Agoston Horvath <ahorvath@bol.com>",
     "Dávid Kosztka <dkosztka@bol.com>",
@@ -18,7 +18,7 @@ readme = "README.md"
 
 [dependencies]
 async-trait = "0.1.30"
-libunftp = { git="https://github.com/bolcom/libunftp", branch="master" }
+libunftp = "0.10.0"
 log = "0.4"
 env_logger = "0.6"
 redis = "0.9.0"
