--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,11 +18,11 @@ readme = "README.md"
 
 [dependencies]
 async-trait = "0.1.30"
-libunftp = "0.10.0"
+libunftp = {git = "https://github.com/bolcom/libunftp.git", branch = "master"}
 log = "0.4"
 env_logger = "0.6"
 redis = "0.9.0"
-serde_json = "1.0"
+serde_json = "1.0.52"
 chrono = "0.4.6"
 r2d2 = "0.8.3"
 r2d2_redis = "0.8.0"
