--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ readme = "README.md"
 
 [dependencies]
 async-trait = "0.1.30"
-libunftp = "0.11.0"
+libunftp = {git = "https://github.com/bolcom/libunftp.git", rev = "0b811f77e3f207d82c749383734d8396a9bd789b"}
 log = "0.4"
 env_logger = "0.6"
 redis = "0.9.0"
