--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,8 @@ readme = "README.md"
 [dependencies]
 async-trait = "0.1.30"
 #libunftp = "0.11.1"
-libunftp = {git = "https://github.com/bolcom/libunftp.git", rev = "8f7b446ebfef37f68f583076bd7355699e739b09"}
+libunftp = {git = "https://github.com/bolcom/libunftp.git", rev = "18aa90049efa932349a6261045586b90dbde9135"}
+#libunftp = { path = "../libunftp" }
 log = "0.4"
 env_logger = "0.6"
 redis = "0.9.0"
