--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "unftp"
-version = "0.10.1"
+version = "0.11.0"
 authors = [
     "Agoston Horvath <ahorvath@bol.com>",
     "Dávid Kosztka <dkosztka@bol.com>",
@@ -18,11 +18,8 @@ readme = "README.md"
 
 [dependencies]
 async-trait = "0.1.30"
-#libunftp = "0.11.1"
-libunftp = {git = "https://github.com/bolcom/libunftp.git", rev = "18aa90049efa932349a6261045586b90dbde9135"}
-#libunftp = { path = "../libunftp" }
+libunftp = "0.11.2"
 log = "0.4"
-env_logger = "0.6"
 redis = "0.9.0"
 serde_json = "1.0.52"
 chrono = "0.4.6"
