--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,14 +18,16 @@ readme = "README.md"
 
 [dependencies]
 async-trait = "0.1.30"
-libunftp = "0.11.2"
+# libunftp = "0.11.2"
+# libunftp = { path = "../libunftp" }
+libunftp = {git = "https://github.com/bolcom/libunftp.git", rev = "ac05c6f1ab12c422641265defb4ca66275bdce47"}
 log = "0.4"
 redis = "0.9.0"
 serde_json = "1.0.52"
 chrono = "0.4.6"
 r2d2 = "0.8.3"
 r2d2_redis = "0.8.0"
-slog = { version = "2.4.1", features = ["max_level_trace", "release_max_level_warn"] }
+slog = { version = "2.4.1", features = ["max_level_trace", "release_max_level_info"] }
 slog-term = "2.4.0"
 slog-async = "2.3.0"
 hyper = "0.13.5"
