--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,8 @@ readme = "README.md"
 
 [dependencies]
 async-trait = "0.1.37"
-libunftp = {git = "https://github.com/bolcom/libunftp.git", rev = "7324fe5cc39e84448c11c843ef5acc00e54018bc"}
+#libunftp = { path="../libunftp" }
+libunftp = { git = "https://github.com/bolcom/libunftp.git", branch = "master" }
 redis = "0.9.0"
 serde_json = "1.0.57"
 chrono = "0.4.6"
@@ -31,9 +32,9 @@ hyper = "0.13.7"
 http = "0.2.1"
 prometheus = "0.9.0"
 futures = "0.3"
-tokio = { version = "0.2", features = ["full"]}
+tokio = { version = "0.2", features = ["full"] }
 clap = "2.33.3"
-yup-oauth2 = {version = "4.1.0", optional = true}
+yup-oauth2 = { version = "4.1.0", optional = true }
 lazy_static = "1.4.0"
 
 [features]
