--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "unftp"
-version = "0.11.0"
+version = "0.12.0"
 authors = [
     "Agoston Horvath <ahorvath@bol.com>",
     "Dávid Kosztka <dkosztka@bol.com>",
@@ -18,7 +18,7 @@ readme = "README.md"
 
 [dependencies]
 async-trait = "0.1.37"
-libunftp = {git = "https://github.com/bolcom/libunftp.git", rev = "e4ef636ecf8f5ba31ec083bb15f288f31e05ffb2"}
+libunftp = "0.12.0"
 redis = "0.9.0"
 serde_json = "1.0.57"
 chrono = "0.4.6"
