--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,8 @@ readme = "README.md"
 
 [dependencies]
 async-trait = "0.1.37"
-libunftp = "0.12.0"
+#libunftp = "0.12.0"
+libunftp = {git = "https://github.com/bolcom/libunftp.git", rev = "b1e75bd305d5060992bda64c13f139b35275677b"}
 redis = "0.9.0"
 serde_json = "1.0.57"
 chrono = "0.4.6"
@@ -35,6 +36,7 @@ tokio = { version = "0.2", features = ["full"] }
 clap = "2.33.3"
 yup-oauth2 = { version = "4.1.0", optional = true }
 lazy_static = "1.4.0"
+tokio-rustls= "0.14.1" # Added only to resolve conflicts
 
 [features]
 pam_auth = ["libunftp/pam_auth"]
