--- a/scratch.Dockerfile.template
+++ b/scratch.Dockerfile.template
@@ -12,8 +12,9 @@ RUN BUILD_VERSION="%%BUILD_VERSION%%" cargo build --no-default-features --featur
 FROM scratch
 
 COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
-
-# run as user for security
+COPY --chown=1010:1010  --from=builder /srv /srv
 COPY --chown=1010:1010 --from=builder /usr/src/unftp/target/x86_64-unknown-linux-musl/release/unftp /unftp
+
+VOLUME /srv
 USER 1010
-CMD ["/unftp"]
+CMD ["/unftp", "-vv"]
