--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,8 @@ repository = "https://github.com/bolcom/unFTP"
 homepage = "https://github.com/bolcom/unFTP"
 license = "Apache-2.0"
 readme = "README.md"
-keywords = ["ftp", "ftps", "server"]
-categories = ["servers"]
+keywords = ["ftp", "ftps", "server", "gcs"]
+categories = ["network-programming"]
 documentation = "https://github.com/bolcom/unFTP"
 
 [workspace]
@@ -44,20 +44,23 @@ tokio-rustls = "0.14.1" # Added only to resolve conflicts
 thiserror = "1.0.20" # Added only to resolve conflicts
 
 [features]
-pam_auth = ["libunftp/pam_auth"]
+all = ["pam_auth", "rest_auth", "jsonfile_auth", "cloud_storage"]
 cloud_storage = ["libunftp/cloud_storage", "yup-oauth2"]
-rest_auth = ["libunftp/rest_auth"]
 jsonfile_auth = ["libunftp/jsonfile_auth"]
+pam_auth = ["libunftp/pam_auth"]
+rest_auth = ["libunftp/rest_auth"]
 
 # build everything by default to make sure build works
 default = ["rest_auth", "cloud_storage", "jsonfile_auth"]
 
-# features that are compatible with docker builds
-# pam is disabled in most docker images as it requires libc (consequently, cannot compile static either)
-docker = ["rest_auth", "cloud_storage", "jsonfile_auth"]
+# With this we link dynamically to libc and pam
+gnu = ["all"]
 
-# only used in build.rs
-static = []
+# All features able to link statically
+musl = ["rest_auth", "cloud_storage", "jsonfile_auth"]
+
+# Features used in our docker builds
+docker = ["musl"]
 
 [build-dependencies]
 built = "0.3"
@@ -66,3 +69,27 @@ built = "0.3"
 debug = false
 lto = "fat"
 codegen-units = 1
+
+[package.metadata.arch]
+arch = ["x86_64"]
+
+[package.metadata.deb]
+features = ["all"]
+section = "net"
+assets = [
+    ["target/x86_64-unknown-linux-gnu/release/unftp", "usr/bin/", "755"],
+    ["LICENSE", "usr/share/doc/unftp/", "644"],
+    ["README.md", "usr/share/doc/unftp/README", "644"],
+]
+extended-description = """\
+unFTP (unftp) is a FTP(S) server written in Rust and built on top of libunftp and the Tokio asynchronous run-time. It is
+unlike your normal FTP server in that it provides:
+- Configurable Authentication (e.g. Anonymous, PAM or a JSON file).
+- Configurable storage back-ends (e.g. GCS or filesystem)
+- An HTTP server with health endpoints for use for example in Kubernetes for readiness and liveness probes.
+- Integration with Prometheus for monitoring.
+- A proxy protocol mode for use behind proxies like HA Proxy and Nginx.
+
+With unFTP, you can present RFC compliant FTP(S) to the outside world while freeing yourself to use modern APIs and
+techniques on the inside of your perimeter.
+"""
