--- a/alpine-debug.Dockerfile.template
+++ b/alpine-debug.Dockerfile.template
@@ -23,4 +23,4 @@ USER root
 RUN mkdir /unftp
 COPY --from=builder /usr/src/unftp/target/x86_64-unknown-linux-musl/debug/unftp /unftp
 WORKDIR /unftp
-CMD ["/unftp/unftp"]
+CMD ["/unftp/unftp", "-vv"]
