--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ version="0.1.0"
 
 [dependencies]
 async-trait = "0.1.41"
-libunftp = { git = "https://github.com/bolcom/libunftp.git", rev="4c28a114967e99ba2a8c158e23029f65d93cfb47" }
+libunftp = { git = "https://github.com/bolcom/libunftp.git", rev="d80a7c793871bbb605572f4124f536283b601bbb" }
 slog = { version = "2.4.1", features = ["max_level_trace", "release_max_level_info"] }
 slog-term = "2.6.0"
 slog-async = "2.3.0"
@@ -36,12 +36,13 @@ hyper = "0.13.7"
 http = "0.2.1"
 prometheus = "0.10.0"
 futures = "0.3"
-tokio = { version = "0.2", features = ["full"] }
+tokio = { version = "0.3.1", features = ["full"] }
 clap = "2.33.3"
 yup-oauth2 = { version = "4.1.0", optional = true }
 lazy_static = "1.4.0"
-tokio-rustls = "0.14.1" # Added only to resolve conflicts
+tokio-rustls = "0.20.0" # Added only to resolve conflicts
 thiserror = "1.0.20" # Added only to resolve conflicts
+tokio-compat-02 = "0.1.1"
 
 [features]
 all = ["pam_auth", "rest_auth", "jsonfile_auth", "cloud_storage"]
