--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "unftp"
-version = "0.12.1"
+version = "0.12.2"
 authors = [
     "Agoston Horvath <ahorvath@bol.com>",
     "Dávid Kosztka <dkosztka@bol.com>",
@@ -28,7 +28,7 @@ version="0.1.0"
 
 [dependencies]
 async-trait = "0.1.41"
-libunftp = { git = "https://github.com/bolcom/libunftp.git", rev="d80a7c793871bbb605572f4124f536283b601bbb" }
+libunftp = "0.14.0"
 slog = { version = "2.4.1", features = ["max_level_trace", "release_max_level_info"] }
 slog-term = "2.6.0"
 slog-async = "2.3.0"
