--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,21 +28,18 @@ version="0.1.0"
 
 [dependencies]
 async-trait = "0.1.41"
-libunftp = "0.14.1"
-slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_info"] }
-slog-term = "2.6.0"
-slog-async = "2.5.0"
-hyper = "0.13.8"
-http = "0.2.1"
-prometheus = "0.10.0"
-futures = "0.3"
-tokio = { version = "0.3.5", features = ["full"] }
 clap = "2.33.3"
-yup-oauth2 = { version = "4.1.3", optional = true }
+futures = "0.3"
+http = "0.2.2"
+hyper = { version = "0.14.1", features = ["server", "http1"] }
 lazy_static = "1.4.0"
-tokio-rustls = "0.21.1" # Added only to resolve conflicts
-thiserror = "1.0.21" # Added only to resolve conflicts
-tokio-compat-02 = "0.1.2"
+libunftp = { git = "https://github.com/bolcom/libunftp.git", rev="4410a94f9835de3c8f0e48ffb41ab0a4be338289" }
+prometheus = "0.10.0"
+slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_info"] }
+slog-async = "2.5.0"
+slog-term = "2.6.0"
+tokio = { version = "1.0.1", features = ["full"] }
+yup-oauth2 = {version = "5.0.1", optional = true}
 
 [features]
 all = ["pam_auth", "rest_auth", "jsonfile_auth", "cloud_storage"]
