--- a/alpine-debug.Dockerfile.template
+++ b/alpine-debug.Dockerfile.template
@@ -8,12 +8,11 @@ RUN rustup target add x86_64-unknown-linux-musl
 ENV RUSTFLAGS="-C target-feature=+crt-static"
 RUN BUILD_VERSION="%%BUILD_VERSION%%" cargo build --no-default-features --features docker --target=x86_64-unknown-linux-musl
 
-FROM alpine:latest
+FROM alpine:3.13
 
 # for devel only
-RUN apk add lftp
+RUN apk add --repository http://dl-cdn.alpinelinux.org/alpine/v3.13/main fuse lftp curl
 RUN apk add --repository http://dl-cdn.alpinelinux.org/alpine/edge/testing curlftpfs
-RUN apk add --repository http://dl-cdn.alpinelinux.org/alpine/edge/main fuse curl
 
 # we could also RUN 'apk add ca-certificates', but we prefer to be consistent with the -minimal image
 COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
