Update slog-redis dependencies and bump version
The dependencies of the bundled slog-redis crate was rather outdated. In
this commit I upgrade the dependencies and then also:

- Improve the documentation
- Add a contribution guide
- Add a makefile so we can do make pr-prep
- Improve the pr-prep target of the parent project so that it builds the
  whole workspace.

--- a/crates/redislog/Cargo.toml
+++ b/crates/redislog/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "slog-redis"
 description = "Redis drain for slog-rs"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Hannes de Jager <hdejager@bol.com>"]
 edition = "2018"
 license = "Apache-2.0"
@@ -14,8 +14,12 @@ readme = "README.md"
 
 [dependencies]
 chrono = "0.4.6"
-r2d2 = "0.8.3"
-r2d2_redis = "0.8.0"
-redis = "0.9.0"
-serde_json = "1.0.57"
-slog = { version = "2.4.1", features = ["max_level_trace", "release_max_level_info"] }
+r2d2 = "0.8.9"
+r2d2_redis = "0.14.0"
+redis = "0.20.0"
+serde_json = "1.0.64"
+slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_info"] }
+
+
+[dev-dependencies]
+slog-async = "2.6.0"
