--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ futures = "0.3.14"
 http = "0.2.4"
 hyper = { version = "0.14.7", features = ["server", "http1"] }
 lazy_static = "1.4.0"
-libunftp = "0.17.2"
+libunftp = "0.17.3"
 prometheus = "0.12.0"
 slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_info"] }
 slog-async = "2.6.0"
@@ -42,7 +42,10 @@ tokio = { version = "1.5.0", features = ["full"] }
 unftp-sbe-fs = "0.1"
 unftp-sbe-gcs = { version = "0.1", optional = true }
 unftp-auth-rest = { version = "0.1", optional = true }
-unftp-auth-jsonfile = { version = "0.1", optional = true }
+unftp-auth-jsonfile = { version = "0.1.1", optional = true }
+
+## Build conflict fixes
+tracing = "0.1.25"
 
 [target.'cfg(unix)'.dependencies]
 unftp-auth-pam = { version = "0.1", optional = true }
@@ -53,7 +56,6 @@ cloud_storage = ["unftp-sbe-gcs"]
 jsonfile_auth = ["unftp-auth-jsonfile"]
 pam_auth = ["unftp-auth-pam"]
 rest_auth = ["unftp-auth-rest"]
-
 
 # build everything by default to make sure build works
 default = ["rest_auth", "cloud_storage", "jsonfile_auth"]
