--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ http = "0.2.4"
 hyper = { version = "0.14.7", features = ["server", "http1"] }
 lazy_static = "1.4.0"
 libunftp = "0.17.3"
-prometheus = "0.12.0"
+prometheus = { version = "0.12.0", features = ["process"] }
 slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_info"] }
 slog-async = "2.6.0"
 slog-term = "2.8.0"
