--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,12 +28,13 @@ version="0.1.2"
 
 [dependencies]
 async-trait = "0.1.50"
+bitflags = "1.0"
 clap = "2.33.3"
 futures = "0.3.15"
 http = "0.2.4"
 hyper = { version = "0.14.7", features = ["server", "http1"] }
 lazy_static = "1.4.0"
-libunftp = "0.17.4"
+libunftp = { path = "../libunftp"}
 prometheus = { version = "0.12.0", features = ["process"] }
 slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_info"] }
 slog-async = "2.6.0"
@@ -41,14 +42,19 @@ slog-term = "2.8.0"
 tokio = { version = "1.5.0", features = ["full"] }
 unftp-sbe-fs = "0.1.1"
 unftp-sbe-gcs = { version = "0.1.1", optional = true }
-unftp-auth-rest = { version = "0.1", optional = true }
-unftp-auth-jsonfile = { version = "0.1.1", optional = true }
+unftp-auth-rest = { path = "../libunftp/crates/unftp-auth-rest", version = "0.1", optional = true }
+unftp-auth-jsonfile = { path = "../libunftp/crates/unftp-auth-jsonfile", version = "0.1.1", optional = true }
+
 
 ## Build conflict fixes
 tracing = "0.1.26"
 
 [target.'cfg(unix)'.dependencies]
-unftp-auth-pam = { version = "0.1", optional = true }
+unftp-auth-pam = { path = "../libunftp/crates/unftp-auth-pam", version = "0.1", optional = true }
+
+[patch.crates-io]
+libunftp = { path = "../libunftp"}
+
 
 [features]
 all = ["pam_auth", "rest_auth", "jsonfile_auth", "cloud_storage"]
