--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,26 +34,28 @@ futures = "0.3.15"
 http = "0.2.4"
 hyper = { version = "0.14.7", features = ["server", "http1"] }
 lazy_static = "1.4.0"
-libunftp = { path = "../libunftp"}
+libunftp = { git = "https://github.com/bolcom/libunftp.git", rev="44b8c8eebc43baadce3275cb890570bdca4b525e" }
 prometheus = { version = "0.12.0", features = ["process"] }
+serde = { version = "1.0.125", features = ["derive"] }
+serde_json = { version = "1.0.64" }
 slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_info"] }
 slog-async = "2.6.0"
 slog-term = "2.8.0"
 tokio = { version = "1.5.0", features = ["full"] }
 unftp-sbe-fs = "0.1.1"
 unftp-sbe-gcs = { version = "0.1.1", optional = true }
-unftp-auth-rest = { path = "../libunftp/crates/unftp-auth-rest", version = "0.1", optional = true }
-unftp-auth-jsonfile = { path = "../libunftp/crates/unftp-auth-jsonfile", version = "0.1.1", optional = true }
+unftp-auth-rest = { git = "https://github.com/bolcom/libunftp.git", rev="44b8c8eebc43baadce3275cb890570bdca4b525e", version = "0.1", optional = true }
+unftp-auth-jsonfile = { git = "https://github.com/bolcom/libunftp.git", rev="44b8c8eebc43baadce3275cb890570bdca4b525e", version = "0.1.1", optional = true }
 
 
 ## Build conflict fixes
 tracing = "0.1.26"
 
 [target.'cfg(unix)'.dependencies]
-unftp-auth-pam = { path = "../libunftp/crates/unftp-auth-pam", version = "0.1", optional = true }
+unftp-auth-pam = { git = "https://github.com/bolcom/libunftp.git", rev="44b8c8eebc43baadce3275cb890570bdca4b525e", optional = true }
 
 [patch.crates-io]
-libunftp = { path = "../libunftp"}
+libunftp = { git = "https://github.com/bolcom/libunftp.git", rev="44b8c8eebc43baadce3275cb890570bdca4b525e" }
 
 
 [features]
