--- a/Cargo.toml
+++ b/Cargo.toml
@@ -77,6 +77,9 @@ musl = ["rest_auth", "cloud_storage", "jsonfile_auth"]
 # Features used in our docker builds
 docker = ["musl"]
 
+[dev-dependencies]
+pretty_assertions = "0.7.1"
+
 [build-dependencies]
 built = "0.3"
 
