--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "unftp"
-version = "0.12.10"
+version = "0.12.11"
 authors = [
     "Agoston Horvath <ahorvath@bol.com>",
     "Dávid Kosztka <dkosztka@bol.com>",
@@ -34,7 +34,7 @@ futures = "0.3.15"
 http = "0.2.4"
 hyper = { version = "0.14.9", features = ["server", "http1"] }
 lazy_static = "1.4.0"
-libunftp = { git = "https://github.com/bolcom/libunftp.git", rev="44b8c8eebc43baadce3275cb890570bdca4b525e" }
+libunftp = "0.18.0"
 prometheus = { version = "0.12.0", features = ["process"] }
 serde = { version = "1.0.125", features = ["derive"] }
 serde_json = { version = "1.0.64" }
@@ -42,21 +42,16 @@ slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_in
 slog-async = "2.6.0"
 slog-term = "2.8.0"
 tokio = { version = "1.7.1", features = ["full"] }
-unftp-sbe-fs = "0.1.1"
-unftp-sbe-gcs = { version = "0.1.1", optional = true }
-unftp-auth-rest = { git = "https://github.com/bolcom/libunftp.git", rev="44b8c8eebc43baadce3275cb890570bdca4b525e", version = "0.1", optional = true }
-unftp-auth-jsonfile = { git = "https://github.com/bolcom/libunftp.git", rev="44b8c8eebc43baadce3275cb890570bdca4b525e", version = "0.1.1", optional = true }
-
+unftp-sbe-fs = "0.2.0"
+unftp-sbe-gcs = { version = "0.2.0", optional = true }
+unftp-auth-rest = { version = "0.2.0", optional = true }
+unftp-auth-jsonfile = { version = "0.2.0", optional = true }
 
 ## Build conflict fixes
 tracing = "0.1.26"
 
 [target.'cfg(unix)'.dependencies]
-unftp-auth-pam = { git = "https://github.com/bolcom/libunftp.git", rev="44b8c8eebc43baadce3275cb890570bdca4b525e", optional = true }
-
-[patch.crates-io]
-libunftp = { git = "https://github.com/bolcom/libunftp.git", rev="44b8c8eebc43baadce3275cb890570bdca4b525e" }
-
+unftp-auth-pam = { version = "0.2.0", optional = true }
 
 [features]
 all = ["pam_auth", "rest_auth", "jsonfile_auth", "cloud_storage"]
