--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,11 +28,13 @@ version="0.1.2"
 
 [dependencies]
 async-trait = "0.1.51"
+base64 = "0.13.0"
 bitflags = "1.3.2"
 clap = "2.33.3"
 futures = "0.3.17"
 http = "0.2.5"
 hyper = { version = "0.14.13", features = ["server", "http1"] }
+hyper-rustls = "^0.22"
 lazy_static = "1.4.0"
 libunftp = "0.18.1"
 prometheus = { version = "0.12.0", features = ["process"] }
@@ -41,6 +43,7 @@ serde_json = { version = "1.0.68" }
 slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_info"] }
 slog-async = "2.7.0"
 slog-term = "2.8.0"
+thiserror = "1.0.30"
 tokio = { version = "1.12.0", features = ["full"] }
 unftp-sbe-fs = "0.2.0"
 unftp-sbe-gcs = { version = "0.2.0", optional = true }
