--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ version="0.1.2"
 async-trait = "0.1.52"
 base64 = "0.13.0"
 bitflags = "1.3.2"
-clap = "2.33.3"
+clap = { version = "3.1.7", features = ["derive", "env"] }
 futures = "0.3.19"
 http = "0.2.6"
 hyper = { version = "0.14.16", features = ["server", "http1"] }
